@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Adapt to version argument in load_module
 
 0.009     2024-07-02 19:10:19+02:00 Europe/Brussels
           - Eliminate references to no longer existing _libraries method
